--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.17", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json", "blocking"] }
+serde ={version =  "1.0.144", features = ["derive"] }
+simple-error = "0.2.3"
+home = "0.5.3"
+toml = "0.5.9"
