--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,13 +15,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Pre-Reqs
+      run: sudo apt install libdbus-1-dev pkg-config -y
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
-    - uses: actions-rs/toolchain@v1
-      with:
+    - name: Run tests
+      run: cargo test --verbose
+  lint-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions-rs/toolchain@v1
+        with:
             toolchain: nightly
             components: clippy
             override: true
-    - name: Run tests
-      run: cargo test --verbose
