--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,16 +10,23 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build-default:
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
 
+  build-libinotify:
+    runs-on: ubuntu-latest
     steps:
     - name: Install Pre-Reqs
       run: sudo apt install libdbus-1-dev pkg-config -y
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose --features libinotify
     - name: Run tests
       run: cargo test --verbose
   lint-check:
