--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,15 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+      
+  build-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
 
   build-libinotify:
     runs-on: ubuntu-latest
@@ -29,9 +38,9 @@ jobs:
       run: cargo build --verbose --features libinotify
     - name: Run tests
       run: cargo test --verbose
+      
   lint-check:
       runs-on: ubuntu-latest
-
       steps:
         - name: Install Pre-Reqs
           run: sudo apt install libdbus-1-dev pkg-config -y
